# ai-demo

./: -  .env  .gitignore  .markdownlint.json  AGENTS.md  README.md  debug_debug.py  debug_keys.py  debug_keys_v2.py  debug_kvcache.py  debug_moe.py  debug_names.py  findings.md  implementer-prompt.md  progress.md  pyproject.toml  shakespeare_model_np_metrics.txt  shakespeare_model_torch_metrics.txt  task_plan.md  test_pytorch_layers.py  tiny_data.txt  verify_e2e.sh
archive/pytorch_prototype/: layers.py  moe.py  pytorch_backend.py  transformer.py
checkpoints/: shakespeare_model.pkl  shakespeare_model_np.pkl  shakespeare_model_torch.pkl  test_model.pkl
debug/: debug_ln.py  debug_ln_v2.py  params.npz
docs/: design.md  fix_equivalence_plan.md  phase_a_plan.md  phase_b_plan.md  phase_c_plan.md  phase_c_plus2_plan.md  phase_c_plus_plan.md  phase_d_plus_plan.md  phase_e_plan.md  phase_e_plus_plan.md  phase_f_plan.md  phase_g_plus2_plan.md  phase_g_plus_plus_plan.md
impl/_cuda/: activation.py  attention.py  block.py  cli.py  compiler.py  ffn.py  inference.py  layernorm.py  model.py  moe.py  rope.py  stack.py  training.py
impl/_np/: cli.py  cross_entropy.py  inference.py  kv_cache.py  model.py  modules.py  optimizer.py  training.py  turboquant_kv_cache.py
impl/_torch/: __init__.py  cli.py  cross_entropy.py  inference.py  kv_cache.py  layers.py  model_config.py  training.py  turboquant_kv_cache.py
impl/_triton/: activation.py  attn.py  cli.py  ffn.py  inference.py  layernorm.py  model.py  moe.py  rope.py  training.py  transformer.py
impl/numpy/: __init__.py  modules.py
scripts/: auto_test_equivalence.py  download_tinystories.py  infer.py  train.py  verify_equivalence.py
shared/: checkpoint.py  config.py  config_utils.py  constants.py  dataset.py  init.py  tokenizer.py
shared/utils/: logger_setup.py
src/: evaluation.py  inference.py  loss.py  main.py  optimizer.py  train.py  trainer.py  validate_e2e.py
src/backends/: numpy_backend.py
src/core/: base_backend.py  registry.py
src/model/: attention.py  layers.py  moe.py  rope.py  transformer.py
src/tokenizer/: char_tokenizer.py
src/training/: app.py  data_loader.py
src/utils/: backend_interface.py  checkpoint.py  profiler.py
tests/: conftest.py  debug_chain.py  debug_ln.py  test_backend_interface.py  test_cross_backend.py  test_inference_cache.py  test_kv_cache_cross_backend.py  test_kv_cache_invariant.py  test_mha_backward_rope.py  test_mha_rope.py  test_mha_rope_backward.py  test_mha_rope_fail.py  test_optimizer.py  test_parity.py  test_parity_mock.py  test_parity_utils.py  test_pytorch_backend.py  test_pytorch_components.py  test_pytorch_transformer.py  test_rope.py  test_rope_2d.py  test_rope_4d.py  test_rope_cache.py  test_rope_relative.py  test_transformer_no_pos_pe.py  test_turboquant_cache.py
(+156 files in other folders)
