[project]
name = "ai-demo"
version = "0.1.0"
description = "Decoder-only transformer learning project in 4 backends"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "datasets>=2.14",
    "tokenizers>=0.15",
    "tqdm>=4.65",
    "transformers>=4.40",
    "triton>=3.6.0",
]
optional-dependencies = {triton = ["triton>=2.2"], cuda = ["cuda-python>=12.0"]}
dev = ["pyright>=1.1", "pytest>=7.0", "pytest-timeout>=2.0", "ruff>=0.4"]

[[tool.uv.index]]
name = "pytorch-jetson"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126"

[tool.uv.sources]
torch = { index = "pytorch-jetson" }

[project.scripts]
train = "impl._np.cli:main"
infer = "impl._np.cli:main"
torch-infer = "impl._torch.cli:main"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C90"]
ignore = ["E501"]  # let formatter handle line lengths

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 300
pythonpath = ["shared"]
markers = [
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
]

[tool.pyright]
include = ["shared"]
extraPaths = ["shared", "tests"]
reportMissingImports = true
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
]
